--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -44,8 +44,11 @@
           <li><a href="/1xbet-mobil-uygulama.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>Mobil Uygulama ve <br>Müşteri Hizmetleri</span></a></li>
          
         </ul>
-      </nav>    <!-- .nav-menu -->        <img STYLE="    padding: 75px;      " src="/assets/img/bahisrator.png" alt="1xbet"  height="50">
+      </nav>    <!-- .nav-menu -->         <div class="container" style="padding:65px;">
 
+        <img src="/assets/img/bahisrator.png" alt="1xbet"  width="50" height="50" >
+       </div>
+  
     </div>
   </header>
   
@@ -90,6 +93,8 @@
   </main>
 
 
+  
+ 
   
  
   
