--- a/utills/head.html
+++ b/utills/head.html
@@ -2,6 +2,7 @@
 <title>1XBET Giriş - 1XBET Güncel Giriş Adresi 2021</title>
 <meta name="description" content=“1xbet giriş yapmak istiyorsanız sayfamızdaki linkleri kullanarak sitenin en güncel giriş adresini kolayca öğrenebilirsiniz.">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<link rel="shortcut icon" type="image/jpg" href="/assets/img/logo.png"/>
 
   {
     "@context": "http://schema.org",
