--- a/widgets/banner.html
+++ b/widgets/banner.html
@@ -3,7 +3,7 @@
 <div class="brand-details">
     <table>
     <tbody>
-    <tr class="brand"><td class="none">🥇 1xbet&nbsp;</td><td class="logo img"><span>1xbet&nbsp;</span><img src="/assets/img/logo.png" alt="1xbet"  width="50" class="loaded"></td>
+    <tr class="brand"><td class="none">🥇 1xbet&nbsp;</td><td class="logo img"><span>1xbet&nbsp;</span><img src="/assets/img/logo.png" alt="1xbet"  width="50" height="50" class="loaded"></td>
     </tr>
     <tr class="rate">
     <td><span>⭐</span>Puanı</td>
