--- a/1xbet-giris.html
+++ b/1xbet-giris.html
@@ -46,7 +46,10 @@
         </ul>
       </nav>    <!-- .nav-menu -->  
       
-            <img STYLE="    padding: 75px;      " src="/assets/img/bahisrator.png" alt="1xbet"  height="50">
+           <div class="container" style="padding:65px;">
+
+            <img src="/assets/img/bahisrator.png" alt="1xbet"  width="50" height="50" >
+           </div>
       
 
     </div>
@@ -101,7 +104,7 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet"> 
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/innerjs.js"></script>
