--- a/1xbet-kampanyalar.html
+++ b/1xbet-kampanyalar.html
@@ -44,8 +44,11 @@
           <li><a href="/1xbet-mobil-uygulama.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>Mobil Uygulama ve <br>Müşteri Hizmetleri</span></a></li>
          
         </ul>
-      </nav>    <!-- .nav-menu -->        <img STYLE="    padding: 75px;      " src="/assets/img/bahisrator.png" alt="1xbet"  height="50">
+      </nav>    <!-- .nav-menu -->            <div class="container" style="padding:65px;">
 
+        <img src="/assets/img/bahisrator.png" alt="1xbet"  width="50" height="50" >
+       </div>
+  
     </div>
   </header>
   
@@ -99,8 +102,6 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/innerjs.js"></script>
-
-
 <script>
 includeHTML();
 </script>
