--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -97,16 +97,24 @@
  
   
  
-  
   <link href="assets/img/logo.png" rel="icon">
   <link href="assets/img/logo.png" rel="apple-touch-icon">
+
+
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="preload" as="style">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="preload" as="style">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="preload" as="style">
+  <link href="assets/css/style.css" rel="preload" as="style">
+
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="assets/js/innerjs.js"></script>
+
 
 
 <script>includeHTML();</script>
