--- a/1xbet.html
+++ b/1xbet.html
@@ -8,7 +8,7 @@
     "@type": "Review",
     "itemReviewed": {
        "@type": "Casino",
-       "name": “1XBET",
+       "name": "1xbet",
        "address”:”Güncel 1xbet giriş adresi sayfamızda bulunuyor!",
        "openingHoursSpecification": "24 Saat",
        "priceRange": "1000₺",
