--- a/1xbet.html
+++ b/1xbet.html
@@ -9,13 +9,13 @@
     "itemReviewed": {
        "@type": "Casino",
        "name": "1xbet",
-       "address”:”Güncel 1xbet giriş adresi sayfamızda bulunuyor!",
+       "address": "Güncel 1xbet giriş adresi sayfamızda bulunuyor!",
        "openingHoursSpecification": "24 Saat",
        "priceRange": "1000₺",
        "telephone": "N/A",
        "image": {
        "@type": "ImageObject",
-       "url": “*****"
+       "url": "https://ulams.com/1xbet.html"
      }
     },
     "reviewRating": {
@@ -26,12 +26,11 @@
     },
     "author": {
           "@type": "Person",
-          "name": “Bahisrator"
-       
+          "name": "Bahisrator"
        },
     "publisher": {
      "@type": "Organization",
-     "name": “1xbet tanıtımı",
+     "name": "1xbet tanıtımı",
      "logo": {
        "@type": "ImageObject",
        "url": "/assets/img/bahisrator.png"
@@ -1195,7 +1194,7 @@ a[href^="/to/"]:hover:before {
   </tr>
   <tr class="rate">
   <td><span>⭐</span>Puanı</td>
-  <td><i class="wert40"><span>4.0 / 4.0</span></i></td>
+  <td><i class="wert50"><span>5.0 / 5.0</span></i></td>
   </tr>
   <tr class="arg"><td> Güven</td>
   <td>En Güvenilir Bahis Sitesi</td>
