--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -1163,8 +1163,8 @@ a[href^="/to/"]:hover:before {
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="/1xbet.html" class="nav-link scrollto "><i class="bx bx-home"></i> <span>1xbet</span></a></li>
-          <li><a href="/1xbet-giris.html" class="nav-link scrollto active"><i class="bx bx-arrow-from-left"></i> <span>1xbet Giriş</span></a></li>
-          <li><a href="/1xbet-bonus.html" class="nav-link scrollto"><i class="bx bx-bookmark-alt"></i> <span>1xbet Bonus</span></a></li>
+          <li><a href="/1xbet-giris.html" class="nav-link scrollto"><i class="bx bx-arrow-from-left"></i> <span>1xbet Giriş</span></a></li>
+          <li><a href="/1xbet-bonus.html" class="nav-link scrollto active"><i class="bx bx-bookmark-alt"></i> <span>1xbet Bonus</span></a></li>
           <li><a href="/1xbet-para-yatirma.html" class="nav-link scrollto"><i class="bx bx-money"></i> <span>Para Yatırma ve &Ccedil;ekme</span></a></li>
           <li><a href="/1xbet-mobil-giris.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>1xbet Mobil Giriş</span></a></li>
           <li><a href="/musteri-hizmetleri.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>Müşteri Hizmetleri</span></a></li>
