--- a/1xbet-mobil-giris.html
+++ b/1xbet-mobil-giris.html
@@ -60,8 +60,7 @@
 <meta name="robots" content="all, index, follow" />
   <meta charset="utf-8">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <link rel="canonical" href="https://ulams.com">
-  <link rel="amphtml" href="https://ulams.com/1xbet.html">
+  <link rel="canonical" href="https://ulams.com/1xbet-mobil-giris.html">
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
   <title>1XBET Giriş - 1XBET Güncel Giriş Adresi 2021</title>
