--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -184,6 +184,8 @@ text-align: center;
 }
 
 @media (min-width: 500px)   {
+    .ampImgStyle{ float:left;margin-right:20px;
+}
  
 .buttondiv{
 
@@ -1241,6 +1243,10 @@ a[href^="/to/"]:hover:before {
 <!--  Promotion -->
       
       <h1>Bonus ve Promosyonlar</h1>
+      <br>
+      <amp-img class="ampImgStyle" src="assets/img/1xbet_bonus.jpg" alt="1xbet_bonus" width="260" height="158">
+      </amp-img>
+
 <p>1xbet bonus kampanyaları her zaman sekt&ouml;rdeki en avantajlı kampanyalar arasında bulunuyor. Site y&ouml;netimi her zaman avantajlı ve kaliteli fırsatları duyurmak adına promosyonlar sayfasını titizlikle g&uuml;ncel tutuyor.</p>
 <p>En g&uuml;ncel promosyonlar şu şekildedir;</p>
 <ul>
