--- a/1xbet-mobil-giris.html
+++ b/1xbet-mobil-giris.html
@@ -184,6 +184,8 @@ text-align: center;
 }
 
 @media (min-width: 500px)   {
+    .ampImgStyle{ float:left;margin-right:5px;
+}
  
 .buttondiv{
 
@@ -1241,6 +1243,11 @@ a[href^="/to/"]:hover:before {
         <!--  Mobile -->
 
         <h1>1xbet Mobil Giriş</h1>
+      <br>
+        
+        <amp-img class="ampImgStyle"  src="assets/img/1xbet_mobil_giris.jpg" alt="1xbet_mobil_giris" width="260" height="158">
+        </amp-img>
+
 <p>Firma mobil uygulamalara da &ouml;nem veriyor. Kullanıcılara İOS ve Android mobil aplikasyon sunuyor. Tabi ki herhangi bir aplikasyona ihtiya&ccedil; duymadan da t&uuml;m mobil cihazlarla sitenin mobil platformuna giriş yapabilmek m&uuml;mk&uuml;nd&uuml;r.</p>
 <p>Yine de uygulama y&uuml;klemek isterseniz siteyi ziyaret ederek ilgili sayfadan bu uygulamaları indirebilirsiniz. Kurulumun nasıl yapıldığına dair detaylı bilgiler de veriliyor. Bu sayede kolay bir kurulum ger&ccedil;ekleştirebilir ve &uuml;cretsiz olarak uygulamaları indirerek siteye sorunsuzca giriş yapabilirsiniz.</p>
 <div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
