--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -184,6 +184,8 @@ text-align: center;
 }
 
 @media (min-width: 500px)   {
+    .ampImgStyle{ float:left;margin-right:20px;
+}
  
 .buttondiv{
 
@@ -1241,6 +1243,11 @@ a[href^="/to/"]:hover:before {
   <!--  Promotion -->
 
      <h1>Para Yatırma ve &Ccedil;ekme Y&ouml;ntemleri</h1>
+     <br>
+     
+     <amp-img class="ampImgStyle" src="assets/img/1xbet_para_yatirma.jpg" alt="1xbet_para_yatirma" width="260" height="158">
+     </amp-img>
+
 <p>Finansal işlemler konusunda bahis oyuncularına &ccedil;ok &ouml;nemli fırsatlar sunuluyor. Sitede her zaman geniş ve d&uuml;ş&uuml;k limitli para yatırma y&ouml;ntemleri bulabilirsiniz. Tek bir tıkla hesabınıza 7 g&uuml;n 24 saat para yatırabiliyorsunuz.</p>
 <p>Para yatırma y&ouml;ntemleri ş&ouml;yledir;</p>
 <ul>
