--- a/1xbet.html
+++ b/1xbet.html
@@ -71,8 +71,6 @@
 
 
 
-
-
 .bottomlogo{
   bottom: 0;
     padding: 65px;
@@ -184,7 +182,10 @@ text-align: center;
 }
 
 @media (min-width: 500px)   {
- 
+    .ampImgStyle{ float:left;margin-right:5px;
+}
+
+
 .buttondiv{
 
 margin-top: 30px;
@@ -1067,6 +1068,10 @@ a[href^="/to/"]:hover:before {
     border-bottom: 1px solid #b1b1b1;
 }
 }@media only screen and (min-width:768px) {
+
+   
+
+
     .brand-details .brand, .brand-details .rate {
     width: 210px;
 }
@@ -1242,6 +1247,8 @@ a[href^="/to/"]:hover:before {
   <!--  Home -->
         
         <h1>1xbet</h1>
+<br>
+        <amp-img  class="ampImgStyle" src="assets/img/1xbet_incelemesi.jpg" alt="1xbet_incelemesi" width="260" height="158"></amp-img>
 <p>T&uuml;m d&uuml;nyada ve T&uuml;rkiye'de geniş bir kitleye online bahis ve casino hizmeti veren bir platform olarak &ouml;n plana &ccedil;ıkıyor. Rusya&rsquo;nın &ouml;nde gelen bahis şirketlerinden biridir. Sitede aktif olarak 400 bin &uuml;zerinde kullanıcı bulunuyor. <strong>1xbet</strong> site y&ouml;netimi her g&uuml;n 1000'in &uuml;zerinde etkinlik sunmaya odaklanıyor.</p>
 
  
