--- a/musteri-hizmetleri.html
+++ b/musteri-hizmetleri.html
@@ -184,6 +184,8 @@ text-align: center;
 }
 
 @media (min-width: 500px)   {
+    .ampImgStyle{ float:left;margin-right:20px;
+}
  
 .buttondiv{
 
@@ -1241,6 +1243,11 @@ a[href^="/to/"]:hover:before {
         <!--  Mobile -->
 
        <h1>M&uuml;şteri İlişkileri</h1>
+      <br>
+       
+       <amp-img class="ampImgStyle" src="assets/img/1xbet_musteri_hizmetleri.jpg" alt="1xbet_musteri_hizmetleri" width="260" height="158">
+       </amp-img>
+
 <p>Firmanın m&uuml;şteri ilişkileri departmanı her zaman hızlı ve kaliteli bir şekilde &ccedil;alışıyor. Site y&ouml;netimi canlı destek hattı dışında;</p>
 <ul>
 <li>
