--- a/1xbet-giris.html
+++ b/1xbet-giris.html
@@ -184,6 +184,8 @@ text-align: center;
 }
 
 @media (min-width: 500px)   {
+    .ampImgStyle{ float:left;margin-right:5px;
+}
  
 .buttondiv{
 
@@ -1243,6 +1245,11 @@ a[href^="/to/"]:hover:before {
 <!-- Enter İnformation -->
       
 <h1>1xbet Giriş Adresi</h1>
+<br>
+
+<amp-img class="ampImgStyle" src="assets/img/1xbet_giris_adresi.jpg" alt="1xbet_giris_adresi" width="260" height="158">
+</amp-img>
+
 <p>Curacao lisanslı olarak hareket ettiği i&ccedil;in belirli zamanlarda erişime kapanabiliyor. Sitenin erişim kısıtlamaları yaşaması durumunda mevcut giriş adresi aktif olmuyor.</p>
 <p>B&ouml;yle bir durumda, kullanıcılar 1xbet giriş işlemlerini farklı bir adres &uuml;zerinden yapmalıdır. Site y&ouml;netimi BTK kısıtlamaları geldiğinde hemen yeni bir adresi aktif hale getiriyor ve duyuru sistemiyle t&uuml;m &uuml;yelere bildiriyor.</p>
 <p>Sitede yaşanan erişim kısıtlamalarını &ouml;ğrenmek i&ccedil;in bizleri de takip edebilirsiniz. Yeni 1xbet giriş adresi &uuml;zerinde de kullanıcı adı ve parola bilgileriniz aynı olur. Aynı zamanda kullanıcıların t&uuml;m bakiye ve bonus kullanım hakları da sabit kalır.</p>
