--- a/1xbet.html
+++ b/1xbet.html
@@ -39,6 +39,16 @@
  }
 </script>
 
+<link rel="preload" as="image" href="/assets/img/1xbet_bonus.webp" />
+<link rel="preload" as="image" href="/assets/img/1xbet_giris_adresi.webp" />
+<link rel="preload" as="image" href="/assets/img/1xbet_incelemesi.webp" />
+<link rel="preload" as="image" href="/assets/img/1xbet_mobil_giris.webp" />
+<link rel="preload" as="image" href="/assets/img/1xbet_musteri_hizmetleri.webp" />
+<link rel="preload" as="image" href="/assets/img/1xbet_para_yatirma.webp" />
+<link rel="preload" as="image" href="/assets/img/bahisrator.webp" />
+<link rel="preload" as="image" href="/assets/img/licence.webp" />
+<link rel="preload" as="image" href="/assets/img/logo.webp" />
+<link rel="preload" as="image" href="/assets/img/sterne.webp" />
 
   <meta http-equiv="Content-Language" content="tr" />
   <meta name="location" content="Türkiye, tr, turkey" />
