--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -12,8 +12,8 @@
   <link rel="alternate" href="https://ulams.com/1xbet-para-yatirma.html" hreflang="tr-TR"/>
   <link rel="canonical" href="https://ulams.com/1xbet-para-yatirma.html">
 
-  <title>1xbet para yatırma yöntemleri - 2021 Güncel 1xbet para çekme yöntemleri</title>
-  <meta name="description" content="1xbet para yatırmak  veya çekmek istiyorsanız sayfamızdaki linkleri kullanarak sitenin en güncel para yatırma ve çekme yöntemlerini kolayca öğrenebilirsiniz.">
+  <title>1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı</title>
+  <meta name="description" content="1xbet para yatırma ve çekme yöntemleri hakkında bilgi almak ve yeni üye olmak için gereken güncel 1xbet giriş adresine sayfamızdan ulaşabilirsiniz..">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui"/>
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -21,13 +21,13 @@
 <meta name="apple-touch-fullscreen" content="yes">
 
 <meta property="og:url" content="https://ulams.com/1xbet-para-yatirma.html"/>
-<meta property="og:title" content="1xbet para yatırma yöntemleri - 2021 Güncel 1xbet para çekme yöntemleri"/>
-<meta property="og:site_name" content="1xbet para yatırma ve çekme yöntemleri "/>
+<meta property="og:title" content="1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı"/>
+<meta property="og:site_name" content="1xbet Tanıtım Sitesi"/>
 <meta property="og:image" content="https://ulams.com/assets/img/bahisrator.webp"/>
 
 <meta name="twitter:url" content="https://ulams.com/1xbet-para-yatirma.html"/>
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:title" content="1xbet para yatırma yöntemleri - 2021 Güncel 1xbet para çekme yöntemleri"/>
+<meta name="twitter:title" content="1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı"/>
 <meta name="twitter:image:src" content="https://ulams.com/assets/img/bahisrator.webp"/>
 
   <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -42,7 +42,7 @@
         "@type": "WebPage",
         "@id": "https://ulams.com/1xbet-para-yatirma.html"
       },
-      "headline": "1xbet para yatırma yöntemleri - 2021 Güncel 1xbet para çekme yöntemleri",
+      "headline": "1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı",
       "image": [
         "https://ulams.com/assets/img/1xbet_para_yatirma.webp"
       ],
@@ -63,6 +63,7 @@
     }
     </script>
 
+    <link href="/assets/img/favicon.webp" rel="icon" type="image/x-icon" />    
 
 <link rel="preload" as="image" href="/assets/img/1xbet_bonus.webp" />
 <link rel="preload" as="image" href="/assets/img/1xbet_giris_adresi.webp" />
