--- a/1xbet.html
+++ b/1xbet.html
@@ -69,7 +69,8 @@
       }
    }
 </script>
-      
+
+  <link href="/assets/img/favicon.webp" rel="icon" type="image/x-icon" />    
   <link rel="preload" as="image" href="/assets/img/1xbet_bonus.webp" />
   <link rel="preload" as="image" href="/assets/img/1xbet_giris_adresi.webp" />
   <link rel="preload" as="image" href="/assets/img/1xbet_incelemesi.webp" />
