1xbet-para-yatirma html page's updated

--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -1371,15 +1371,32 @@
 
   <!--  Promotion -->
 
-     <h1>Para Yatırma ve &Ccedil;ekme Y&ouml;ntemleri</h1>
+     <h1>1xbet Para Yatırma ve &Ccedil;ekme Y&ouml;ntemleri</h1>
      <br>
 
      <div class="ampImgStyleDiv">
         <amp-img data-amp-auto-lightbox-disable   class="ampImgStyle" src="assets/img/1xbet_para_yatirma.webp" alt="1xbet_para_yatirma" width="260" height="158"></amp-img>
         
     </div>
-<p>Finansal işlemler konusunda bahis oyuncularına &ccedil;ok &ouml;nemli fırsatlar sunuluyor. Sitede her zaman geniş ve d&uuml;ş&uuml;k limitli para yatırma y&ouml;ntemleri bulabilirsiniz. Tek bir tıkla hesabınıza 7 g&uuml;n 24 saat para yatırabiliyorsunuz.</p>
-<p>Para yatırma y&ouml;ntemleri ş&ouml;yledir;</p>
+<p>
+<b>  <a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet</a></b> bahis sitesi, finansal işlemler konusunda bahis oyuncularına çok sayıda ve farklı sistemlerde işlem yapabilme imkanı sunuluyor. Sitede her zaman geniş ve düşük limitli para yatırma ve çekme yöntemleri bulabilirsiniz. 
+</p>
+<p>
+    Tek bir tıkla hesabınıza 7 gün 24 saat para yatırabilir ve çekimlerinizi de aynı şekilde hızlıca gerçekleştirebilirsiniz.
+</p>
+<p>
+    Gerek para yatırma gerekse para çekme işlemlerinde belirli alt ve üst limitler bulunuyor. Bu limitler zaman zaman ve yoğunluk durumuna göre esnetilebilmektedir.
+</p>
+<p>
+    Tüm yatırım ve çekim işlemlerinde ilave masraf söz konusu olmuyor. Bankanızın ya da ödeme sisteminizin aldığı ücretleri göz önünde bulundurarak sizin için en iyi yöntemi tercih edebilmek gibi bir imkanınız var.
+</p>
+
+<h3>
+    Para Yatırma
+</h3>
+
+<p><b><a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet giriş</a> </b> yaptıktan sonra kullanabileceğiniz para yatırma yöntemleri şöyledir;
+</p>
 <ul>
 <li>
 <p>Banka havalesi</p>
@@ -1415,9 +1432,18 @@
 <p>Kripto para (Bu b&ouml;l&uuml;mde şuan aktif 31 tane kripto para birimi bulunuyor.)</p>
 </li>
 </ul>
+
+
+
+
+
 <p>Sitede para yatırma y&ouml;ntemleri s&uuml;rekli olarak değişiklik g&ouml;steriyor. Bu y&uuml;zden de aktif y&ouml;ntemler konusunda yatırım &ouml;ncesi canlı destek hattına bağlanarak bilgi alabilirsiniz. Ayrıca sitenin aktif para yatırma limitlerini de canlı yardım hattı &uuml;zerinden &ouml;ğrenebileceğinizi de unutmayın.</p>
 <p>1xbet para &ccedil;ekme konusunda da bahis severlere &ccedil;ok avantajlı bir men&uuml; sağlıyor. Sitede ger&ccedil;ekleştirdiğiniz kazan&ccedil;ları kolaylıkla yeterli bakiyeniz olması durumunda &ccedil;ekebilirsiniz.</p>
-<p>Para &ccedil;ekme se&ccedil;enekleri şu şekildedir;</p>
+<div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
+
+
+<h3>Para Çekme</h3>
+
 <ul>
 <li>
 <p>Astropay</p>
@@ -1453,8 +1479,51 @@
 <p>Firma, para &ccedil;ekme işlemlerinde her zaman hızlı hizmet sunuyor. 1 ile 20 dakika arasında t&uuml;m &ouml;demeler hesaplarınıza yatırılıyor. Aynı zamanda diğer bahis sitelerinin aksine platform hızlı bir şekilde d&uuml;ş&uuml;k limitlere para &ccedil;ekebilmenize olanak tanıyor. Tek haneli bakiyelerle bile para &ccedil;ekme işlemlerini yapabileceğiniz aktif y&ouml;ntemler bulunuyor.</p>
 <div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
 
-  <!-- End Promotion -->
+ 
 
+<h2>
+    1xbet Para Yatırma Bonusları
+</h2>
+
+<p>
+    1xbet canlı bahis sitesi hem yeni hem de eski üyelerine yatırımları için ilave bonus veriyor. Elbette bu bonuslar bazı ödeme yöntemleri için geçerli olabiliyor. Eğer her bir para yatırma işleminiz için bonus almak istiyorsanız kampanyalara mutlaka göz atın deriz.
+</p>
+<p>
+    Sitedeki güncel para yatırma bonusları ise şunlar;
+</p>
+
+<ul>
+    <li>
+    <p> İlk para yatırma bonusu yalnızca yeni üyelere 1 defaya mahsus olarak veriliyor. İlk yatırım tutarının %200’ü oranında ve maksimum 1.000 TL’ye kadar bonus verilmekte. Tüm yatırım yöntemleri geçerlidir.
+    </p>
+    </li>
+    <li>
+    <p>Hoş geldin Bonusu Paketi yeni üye olanlara teklif edilen bir promosyondur. İlk 4 yatırıma 1.500€ bonus + 150 free spin olarak veriliyor. Detaylar <b><a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet Bonus</a></b>  sayfamızda yer almakta. Bu bonus için de tüm yatırım yöntemleri geçerli.
+    </p>
+    </li>
+    <li>
+    <p>Astropay ve Paykasa ödeme sistemleri ile yapılan işlemlerde, yatırılan para tutarının %25'i kadar bonus veriliyor. 24 saat boyunca 1 kez alma hakkı var. Maksimum bonus tutarı ise 1.000 TL’dir. Bonusu almak için minimum yatırım tutarı 20 TL’dir.
+    </p>
+    </li>
+    <li>
+    <p>Hızlı banka havalesi (Bank Expres), Trink ile yapılan her para yatırma işleminde 1.000 TL’ye varan bonus verilmektedir. Yatırılan tutarın %25'i kadar bonus alınabilir. En az 20 TL yatırım yapanlar bonusa hak kazanıyor.
+    </p>
+    </li>
+    <li>
+    <p> Cepbank ile yapılan ödemelerde de %25 oranında ve 1.000 TL’ye kadar bonus almak mümkün. Her 24 saatte bir bonus alınabilir.
+    </p>
+    </li>
+    <li>
+    <p>Jeton yöntemi ile para yatırma işlemlerinde (minimum para yatırma tutarı 5 EUR'dur), yatırılan tutarın %10’u kadar olan kısmına promo kod olarak cashback verilmektedir.
+    </p>
+    </li>
+    
+    </ul>
+
+
+    <p>
+        1xbet para yatırma ve çekme yöntemleri ile ilgili daha detaylı bilgileri <b><a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet müşteri hizmetlerinden</a> </b> öğrenebilirsiniz.
+    </p>
 
     </div>
   </section>
