--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -1379,7 +1379,7 @@
         
     </div>
 <p>
-<b>  <a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet</a></b> bahis sitesi, finansal işlemler konusunda bahis oyuncularına çok sayıda ve farklı sistemlerde işlem yapabilme imkanı sunuluyor. Sitede her zaman geniş ve düşük limitli para yatırma ve çekme yöntemleri bulabilirsiniz. 
+<b>  <a href="https://ulams.com/1xbet.html">1xbet</a></b> bahis sitesi, finansal işlemler konusunda bahis oyuncularına çok sayıda ve farklı sistemlerde işlem yapabilme imkanı sunuluyor. Sitede her zaman geniş ve düşük limitli para yatırma ve çekme yöntemleri bulabilirsiniz. 
 </p>
 <p>
     Tek bir tıkla hesabınıza 7 gün 24 saat para yatırabilir ve çekimlerinizi de aynı şekilde hızlıca gerçekleştirebilirsiniz.
@@ -1395,7 +1395,7 @@
     Para Yatırma
 </h3>
 
-<p><b><a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet giriş</a> </b> yaptıktan sonra kullanabileceğiniz para yatırma yöntemleri şöyledir;
+<p><b><a href="https://ulams.com/1xbet-giris.html" >1xbet giriş</a> </b> yaptıktan sonra kullanabileceğiniz para yatırma yöntemleri şöyledir;
 </p>
 <ul>
 <li>
@@ -1498,7 +1498,7 @@
     </p>
     </li>
     <li>
-    <p>Hoş geldin Bonusu Paketi yeni üye olanlara teklif edilen bir promosyondur. İlk 4 yatırıma 1.500€ bonus + 150 free spin olarak veriliyor. Detaylar <b><a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet Bonus</a></b>  sayfamızda yer almakta. Bu bonus için de tüm yatırım yöntemleri geçerli.
+    <p>Hoş geldin Bonusu Paketi yeni üye olanlara teklif edilen bir promosyondur. İlk 4 yatırıma 1.500€ bonus + 150 free spin olarak veriliyor. Detaylar <b><a href="https://ulams.com/1xbet-bonus.html">1xbet Bonus</a></b>  sayfamızda yer almakta. Bu bonus için de tüm yatırım yöntemleri geçerli.
     </p>
     </li>
     <li>
@@ -1522,7 +1522,7 @@
 
 
     <p>
-        1xbet para yatırma ve çekme yöntemleri ile ilgili daha detaylı bilgileri <b><a href="https://siteye.club/yonleniyor/1xbet/" target="_blank">1xbet müşteri hizmetlerinden</a> </b> öğrenebilirsiniz.
+        1xbet para yatırma ve çekme yöntemleri ile ilgili daha detaylı bilgileri <b><a href="https://ulams.com/musteri-hizmetleri.html">1xbet müşteri hizmetlerinden</a> </b> öğrenebilirsiniz.
     </p>
 
     </div>
