--- a/1xbet-giris.html
+++ b/1xbet-giris.html
@@ -9,8 +9,8 @@
 <meta http-equiv="Content-Language" content="tr" />
 <meta name="location" content="Türkiye, tr, turkey" />
 <meta name="language" content="tr-TR" />
-<link rel="alternate" href="https://ulams.com/1xbet-giris.html" hreflang="tr-TR"/>
-<link rel="canonical" href="https://ulams.com/1xbet-giris.html">
+<link rel="alternate" href="https://ulams.com/1xbet-giris.php" hreflang="tr-TR"/>
+<link rel="canonical" href="https://ulams.com/1xbet-giris.php">
   
 <title> 1xbet giriş adresi - 2021 Güncel 1xbet linkleri </title>
 <meta name="description" content="1xbet giriş yapmak istiyorsanız sayfamızdaki linkleri kullanarak sitenin en güncel giriş adresini kolayca öğrenebilirsiniz.">
@@ -20,12 +20,12 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-touch-fullscreen" content="yes">
 
-<meta property="og:url" content="https://ulams.com/1xbet-giris.html"/>
+<meta property="og:url" content="https://ulams.com/1xbet-giris.php"/>
 <meta property="og:title" content="1xbet giriş adresi - 2021 Güncel 1xbet linkleri"/>
 <meta property="og:site_name" content="1xbet Tanıtım Sitesi"/>
 <meta property="og:image" content="https://ulams.com/assets/img/bahisrator.webp"/>
 
-<meta name="twitter:url" content="https://ulams.com/1xbet-giris.html"/>
+<meta name="twitter:url" content="https://ulams.com/1xbet-giris.php"/>
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="1xbet giriş adresi - 2021 Güncel 1xbet linkleri"/>
 <meta name="twitter:image:src" content="https://ulams.com/assets/img/bahisrator.webp"/>
@@ -39,7 +39,7 @@
       "@type": "NewsArticle",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://ulams.com/1xbet-giris.html"
+        "@id": "https://ulams.com/1xbet-giris.php"
       },
       "headline": "1xbet giriş adresi - 2021 Güncel 1xbet linkleri",
       "image": [
@@ -1257,12 +1257,12 @@
       </div>
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="/1xbet.html" class="nav-link scrollto "><i class="bx bx-home"></i> <span>1xbet</span></a></li>
-          <li><a href="/1xbet-giris.html" class="nav-link scrollto active"><i class="bx bx-arrow-from-left"></i> <span>1xbet Giriş</span></a></li>
-          <li><a href="/1xbet-bonus.html" class="nav-link scrollto"><i class="bx bx-bookmark-alt"></i> <span>1xbet Bonus</span></a></li>
-          <li><a href="/1xbet-para-yatirma.html" class="nav-link scrollto"><i class="bx bx-money"></i> <span>Para Yatırma ve &Ccedil;ekme</span></a></li>
-          <li><a href="/1xbet-mobil-giris.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>1xbet Mobil Giriş</span></a></li>
-          <li><a href="/musteri-hizmetleri.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>Müşteri Hizmetleri</span></a></li>
+          <li><a href="/1xbet.php" class="nav-link scrollto "><i class="bx bx-home"></i> <span>1xbet</span></a></li>
+          <li><a href="/1xbet-giris.php" class="nav-link scrollto active"><i class="bx bx-arrow-from-left"></i> <span>1xbet Giriş</span></a></li>
+          <li><a href="/1xbet-bonus.php" class="nav-link scrollto"><i class="bx bx-bookmark-alt"></i> <span>1xbet Bonus</span></a></li>
+          <li><a href="/1xbet-para-yatirma.php" class="nav-link scrollto"><i class="bx bx-money"></i> <span>Para Yatırma ve &Ccedil;ekme</span></a></li>
+          <li><a href="/1xbet-mobil-giris.php" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>1xbet Mobil Giriş</span></a></li>
+          <li><a href="/musteri-hizmetleri.php" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>Müşteri Hizmetleri</span></a></li>
        
         </ul>
       </nav>    <!-- .nav-menu -->      
