--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -9,8 +9,8 @@
   <meta http-equiv="Content-Language" content="tr" />
   <meta name="location" content="Türkiye, tr, turkey" />
   <meta name="language" content="tr-TR" />
-  <link rel="alternate" href="https://ulams.com/1xbet-para-yatirma.html" hreflang="tr-TR"/>
-  <link rel="canonical" href="https://ulams.com/1xbet-para-yatirma.html">
+  <link rel="alternate" href="https://ulams.com/1xbet-para-yatirma.php" hreflang="tr-TR"/>
+  <link rel="canonical" href="https://ulams.com/1xbet-para-yatirma.php">
 
   <title>1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı</title>
   <meta name="description" content="1xbet para yatırma ve çekme yöntemleri hakkında bilgi almak ve yeni üye olmak için gereken güncel 1xbet giriş adresine sayfamızdan ulaşabilirsiniz..">
@@ -20,12 +20,12 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-touch-fullscreen" content="yes">
 
-<meta property="og:url" content="https://ulams.com/1xbet-para-yatirma.html"/>
+<meta property="og:url" content="https://ulams.com/1xbet-para-yatirma.php"/>
 <meta property="og:title" content="1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı"/>
 <meta property="og:site_name" content="1xbet Tanıtım Sitesi"/>
 <meta property="og:image" content="https://ulams.com/assets/img/bahisrator.webp"/>
 
-<meta name="twitter:url" content="https://ulams.com/1xbet-para-yatirma.html"/>
+<meta name="twitter:url" content="https://ulams.com/1xbet-para-yatirma.php"/>
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı"/>
 <meta name="twitter:image:src" content="https://ulams.com/assets/img/bahisrator.webp"/>
@@ -40,7 +40,7 @@
       "@type": "NewsArticle",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://ulams.com/1xbet-para-yatirma.html"
+        "@id": "https://ulams.com/1xbet-para-yatirma.php"
       },
       "headline": "1xbet Para Yatırma ve Çekme Yöntemleri - 2021 1xbet Tanıtımı",
       "image": [
@@ -1256,12 +1256,12 @@
       </div>
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="/1xbet.html" class="nav-link scrollto "><i class="bx bx-home"></i> <span>1xbet</span></a></li>
-          <li><a href="/1xbet-giris.html" class="nav-link scrollto "><i class="bx bx-arrow-from-left"></i> <span>1xbet Giriş</span></a></li>
-          <li><a href="/1xbet-bonus.html" class="nav-link scrollto "><i class="bx bx-bookmark-alt"></i> <span>1xbet Bonus</span></a></li>
-          <li><a href="/1xbet-para-yatirma.html" class="nav-link scrollto active"><i class="bx bx-money"></i> <span>Para Yatırma ve &Ccedil;ekme</span></a></li>
-          <li><a href="/1xbet-mobil-giris.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>1xbet Mobil Giriş</span></a></li>
-          <li><a href="/musteri-hizmetleri.html" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>Müşteri Hizmetleri</span></a></li>
+          <li><a href="/1xbet.php" class="nav-link scrollto "><i class="bx bx-home"></i> <span>1xbet</span></a></li>
+          <li><a href="/1xbet-giris.php" class="nav-link scrollto "><i class="bx bx-arrow-from-left"></i> <span>1xbet Giriş</span></a></li>
+          <li><a href="/1xbet-bonus.php" class="nav-link scrollto "><i class="bx bx-bookmark-alt"></i> <span>1xbet Bonus</span></a></li>
+          <li><a href="/1xbet-para-yatirma.php" class="nav-link scrollto active"><i class="bx bx-money"></i> <span>Para Yatırma ve &Ccedil;ekme</span></a></li>
+          <li><a href="/1xbet-mobil-giris.php" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>1xbet Mobil Giriş</span></a></li>
+          <li><a href="/musteri-hizmetleri.php" class="nav-link scrollto"><i class="bx bx-mobile"></i> <span>Müşteri Hizmetleri</span></a></li>
        
         </ul>
       </nav>    <!-- .nav-menu -->      
@@ -1379,7 +1379,7 @@
         
     </div>
 <p>
-<b>  <a href="https://ulams.com/1xbet.html">1xbet</a></b> bahis sitesi, finansal işlemler konusunda bahis oyuncularına çok sayıda ve farklı sistemlerde işlem yapabilme imkanı sunuluyor. Sitede her zaman geniş ve düşük limitli para yatırma ve çekme yöntemleri bulabilirsiniz. 
+<b>  <a href="https://ulams.com/1xbet.php">1xbet</a></b> bahis sitesi, finansal işlemler konusunda bahis oyuncularına çok sayıda ve farklı sistemlerde işlem yapabilme imkanı sunuluyor. Sitede her zaman geniş ve düşük limitli para yatırma ve çekme yöntemleri bulabilirsiniz. 
 </p>
 <p>
     Tek bir tıkla hesabınıza 7 gün 24 saat para yatırabilir ve çekimlerinizi de aynı şekilde hızlıca gerçekleştirebilirsiniz.
@@ -1395,7 +1395,7 @@
     Para Yatırma
 </h3>
 
-<p><b><a href="https://ulams.com/1xbet-giris.html" >1xbet giriş</a> </b> yaptıktan sonra kullanabileceğiniz para yatırma yöntemleri şöyledir;
+<p><b><a href="https://ulams.com/1xbet-giris.php" >1xbet giriş</a> </b> yaptıktan sonra kullanabileceğiniz para yatırma yöntemleri şöyledir;
 </p>
 <ul>
 <li>
@@ -1498,7 +1498,7 @@
     </p>
     </li>
     <li>
-    <p>Hoş geldin Bonusu Paketi yeni üye olanlara teklif edilen bir promosyondur. İlk 4 yatırıma 1.500€ bonus + 150 free spin olarak veriliyor. Detaylar <b><a href="https://ulams.com/1xbet-bonus.html">1xbet Bonus</a></b>  sayfamızda yer almakta. Bu bonus için de tüm yatırım yöntemleri geçerli.
+    <p>Hoş geldin Bonusu Paketi yeni üye olanlara teklif edilen bir promosyondur. İlk 4 yatırıma 1.500€ bonus + 150 free spin olarak veriliyor. Detaylar <b><a href="https://ulams.com/1xbet-bonus.php">1xbet Bonus</a></b>  sayfamızda yer almakta. Bu bonus için de tüm yatırım yöntemleri geçerli.
     </p>
     </li>
     <li>
@@ -1522,7 +1522,7 @@
 
 
     <p>
-        1xbet para yatırma ve çekme yöntemleri ile ilgili daha detaylı bilgileri <b><a href="https://ulams.com/musteri-hizmetleri.html">1xbet müşteri hizmetlerinden</a> </b> öğrenebilirsiniz.
+        1xbet para yatırma ve çekme yöntemleri ile ilgili daha detaylı bilgileri <b><a href="https://ulams.com/musteri-hizmetleri.php">1xbet müşteri hizmetlerinden</a> </b> öğrenebilirsiniz.
     </p>
 
     </div>
