--- a/1xbet-giris.html
+++ b/1xbet-giris.html
@@ -1413,6 +1413,26 @@
 </ul>
 <p>1xbet &uuml;yelik işlemleri kısa s&uuml;re i&ccedil;inde tamamlanır. Kullanıcılar hemen hesaplarına para yatırarak deneyim yaşamaya başlayabilir. Sitede deneme bonusu bulunmadığı i&ccedil;in bahis veya casino oyunlarına katılım i&ccedil;in para yatırmak gerektiğini hatırlatalım.</p>
 <!-- End Enter İnformation -->
+<div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
+
+
+<h2>1xbet Yeni Giriş Adresi
+</h2>
+<p>
+    Dünyaca ünlü 1xbet bahis ve casino sitesi, Rusya merkezli bir sitedir. Farklı ülkelerde hizmet vermekle birlikte yine bu ülkelerden aldığı lisans ile hizmet vermektedir. Türkiye’de yabancı bahis sitelerine lisans verilmediği için 1xbet sitesi, Türk oyunculara Curacao lisansı ile hizmet veriyor.
+</p>
+<p>
+    Bu yüzdendir ki, Türkiye’deki web sitesi belirli dönemlerde erişim engelleri ile karşı karşıya kalıyor. Erişim kısıtlaması sonrasında kısa bir süre içerisinde, yaklaşık 10 – 15 dakikada yeni adresini aktif hale getirmektedir.
+</p>
+<p>
+    1xbet sitesinin Türkiye’den erişilebilen adresi sürekli değiştiği için takibi de zor olmaktadır. Bu nedenle sizlere en güncel linkleri sunuyoruz. Sayfamızdaki linkler otomatik olarak güncellenir. Böylelikle 1xbet yeni giriş adresine her zaman bu linklerden kolayca ulaşabilirsiniz.
+</p>
+<p>
+    Siteye ulaşmak için farklı alternatifler de bulunuyor. Bunlardan biri sitenin mobil uygulamalarını kullanmaktır. 1xbet mobil uygulaması hakkında detaylı bilgilere ise 1xbet Mobil Giriş yazımızdan ulaşabilirsiniz.
+</p>
+<p>
+    Dilerseniz +908503902148 telefon numarasını arayarak müşteri hizmetleri ile görüşerek de sitenin güncel adresini öğrenebilirsiniz. 
+</p>
 
     </div>
 </section>
