--- a/1xbet-mobil-giris.html
+++ b/1xbet-mobil-giris.html
@@ -1381,10 +1381,104 @@
 <p>Yine de uygulama y&uuml;klemek isterseniz siteyi ziyaret ederek ilgili sayfadan bu uygulamaları indirebilirsiniz. Kurulumun nasıl yapıldığına dair detaylı bilgiler de veriliyor. Bu sayede kolay bir kurulum ger&ccedil;ekleştirebilir ve &uuml;cretsiz olarak uygulamaları indirerek siteye sorunsuzca giriş yapabilirsiniz.</p>
 <br>
 
+
+
 <div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
+<br>
+
+<p>
+    1xbet firması, mobil uygulamalarını sürekli olarak geliştiriyor. Modern ve akıllı tabir edilen mobil cihazların sağladığı tüm avantajları aynı şekilde üyelerinin de yararına olacak şekilde çalışmalar yapıyorlar. Firmanın buradaki asıl amacı ise basitlik ve güvenliğin yanı sıra en yüksek seviyede müşteri memnuniyeti sağlamak.
+</p>
 
 
-        <!-- End Mobile -->
+<p>
+    Mobil uygulamalarda yapılan son güncelleme ile skorlar ve oranlar canlı olarak güncellenmiştir. Bahis geçmişinize hızlı bir şekilde erişim sağlayabilirsiniz. Ayrıca çok çeşitli canlı etkinlikler eklenmiştir.
+</p>
+
+<h2>
+    1xbet Android Uygulaması
+</h2>
+
+        <p>
+            1xbet sitesine, Android cihazlar ile erişim sağlamak için geliştirilmiş olan uygulamayı siteden ücretsiz olarak indirebilirsiniz. Kurulumun nasıl yapılacağını merak ediyorsanız çok basit. Aşağıdaki adımları izleyerek kısa sürede 1xbet Android Uygulaması kurulumunu gerçekleştirebilirsiniz.
+        </p>
+
+        <ul>
+            <li>
+                1xbet sitesine giriş yaptıktan sonra 'mobil' bölümünü açın ve orada yer alan Android logosuna tıklayın. <a href="https://lite-1x61541.com/downloads/androidclient/releases_android/1xbet/site/1xbet.apk">Buraya tıklayarak</a> da dosyayı indirebilirsiniz.
+            </li>
+            <li>
+                Telefonunuzda Ayarlar bölümünde yer alan 'bilinmeyen uygulamaları yükle' bölümünü açın.
+            </li>
+            <li>
+                Bilinmeyen kaynaklardan uygulama yüklenmesine izin verin.
+            </li>
+            <li>
+                Sonrasında indirilen uygulama dosyasını seçin.
+            </li>
+            <li>
+                Yükle butonuna tıklayın.
+            </li>
+            <li>
+                Bu işlemlerden sonra uygulama yüklenmiş olacaktır.
+            </li>
+        </ul>
+
+        <p>
+            Artık 1xbet Android uygulaması üzerinden kullanıcı girişi yapabilirsiniz. Eğer bir hesabınız yoksa uygulama üzerinden de hızlı bir şekilde üyelik işleminizi tamamlayabilirsiniz. Siteye nasıl üye olacağınız hakkında detaylara <a href="https://ulams.com/1xbet-giris.php">1xbet Giriş</a> bölümünde yer vermiştik.
+        </p>
+
+        <div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
+
+
+        
+<h2>
+    1xbet IOS Uygulaması
+</h2>
+
+        <p>
+            IOS/IPhone kullanıcılar için de ayrı bir 1xbet mobil giriş uygulaması bulunmaktadır. Bu uygulamaya da site içerisindeki ilgili sayfadan ulaşabilir ve ücretsiz olarak indirebilirsiniz. Dilerseniz aşağıdaki adımları izleyerek hemen şimdi 1xbet iOS uygulamasını telefonunuza yüklemeniz de mümkündür.
+        </p>
+
+        <ul>
+            <li>
+                Telefonunuzdaki Ayarlar menüsüne gidin, bu kısımda bulunan iTunes & App Store'u seçin.
+            </li>
+            <li>
+                Apple Kimliği öğesinde dokunun ve Apple kimliğinize basın.
+            </li>
+            <li>
+                'Apple Kimliğini Göster' öğesine basın ve şifrenizi girin.
+            </li>
+            <li>
+                Ülke/Bölge kısmından 'Ülke veya Bölge değiştir' öğesine dokunun.
+            </li>
+            <li>
+                Ülkeler arasından 'Ukrayna'yı seçin.
+            </li>
+            <li>
+                Kullanıcı sözleşmesini kabul edin.
+            </li>
+            <li>
+                Adres alanlarını doldurun. (Street: Richna, Şehir: Kiev, Posta Kodu: 01135, Telefon: 44 236-97-51)
+            </li>
+            <li>
+                Ödeme yöntemleri kısmından 'hiçbiri' seçimini yapın ve ardından sonraki yazan yere basın.
+            </li>
+            <li>
+                App Store'a gidin ve burada 'Onebahis' araması yapın. (ya da direk <a href="https://apps.apple.com/app/1xbet/id844035425">bu bağlantıya tıklayın</a>)
+            </li>
+            <li>
+                Bir hata mesajı alırsanız yeni bir hesap açmanız gerekecektir.
+            </li>
+            <li>
+                Yeni bir hesap açarken Ukrayna'yı seçmelisiniz. Sonrasında yukarıdaki adımları tekrar ederek kurulumu tamamlayabilirsiniz.
+            </li>
+        </ul>
+
+        <p>
+            1xbet iOS uygulamasını telefonunuza yükledikten sonra kullanıcı girişi yaparak istediğiniz zaman engellere takılmadan 1xbet mobil giriş işleminizi gerçekleştirebilirsiniz. Tüm bu konularda yardım talebiniz olursa hiç çekinmeden <a href="https://ulams.com/musteri-hizmetleri.php">1xbet müşteri hizmetleri</a> departmanından destek alabilirsiniz.
+        </p>
 
     </div>
   </section>  
