--- a/1xbet.html
+++ b/1xbet.html
@@ -1399,13 +1399,67 @@ a[href^="/to/"]:hover:before {
 <p>Kendine &ouml;zg&uuml; ve yenilenmiş olan site yapısı ile gerek profesyonel gerekse amat&ouml;r bahis&ccedil;ilerin ihtiyacını karşılayan bir deneyim sunuyor.</p>
 <p>&Uuml;cretsiz ma&ccedil; yayınları sayesinde siteye &uuml;ye olmayan ziyaret&ccedil;ilere dahi keyifli anlar yaşatan son derece kaliteli bir bahis sitesidir.</p>
 <p>Siteye &uuml;ye olmak i&ccedil;in <a href="https://siteye.club/yonleniyor/1xbet" target="_blank"><strong>buraya</strong></a> tıklayabilirsiniz.</p>
-<p>1xbet firmasının &ouml;nde gelen spor kul&uuml;pleri ve spor organizasyonları ile yapmış olduğu sponsorluk anlaşmaları bulunuyor. Ge&ccedil;tiğimiz yıl Barcelona ve Liverpool futbol kul&uuml;pleri ile uzun s&uuml;reli yaptığı anlaşma b&uuml;y&uuml;k bir ses getirmişti.</p>
-
-
 
 
 <div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
-  <!-- End Home -->
+
+
+
+<h2>
+    1xbet İlk Üyelik Bonusu
+</h2>
+<p>
+    Firma'nın yeni üyelere özel olarak düzenlediği ilk üyelik bonusu kampanyası oldukça cazip. Bonustan üye olduktan sonra ilk para yatırma işleminde yararlanılıyor. Bu nedenle yatırım yaparken bonus alacaksanız eğer maksimum tutarda almanızı tavsiye ederiz.
+
+</p>
+
+<p>
+    Yeni üyelere özel olan ilk üyelik bonusu tam olarak 1.000 TL ve yatırılan paranın %200'ü oranında veriliyor. Yani 500 TL yatırım yaptığınızda 1.000 TL bonus alabiliyorsunuz. En az 10 Tl yatırarak da bu bonustan yararlanabiliyorsunuz.. Alınan bonus spor bahislerinde, casino oyunlarında ve sanal bahislerde kullanılabiliyor.
+
+</p>
+
+<p>
+    İlk kez yatırım yapanlara özel bir başka bonus ise hoşgeldin bonusu paketidir. Bu pakette ise 1.500 Euro ve 150 Freespin alma imkanı var. En az 10 Euro yatırarak bu kampanyadan yararlanmak mümkün. İlk dört yatırıma özel olarak verilmektedir. Düzenli yatırım yapan ve yüksek tutarda bonus almak isteyenler için kaçırılmayacak bir fırsat!
+
+</p>
+
+
+<h2>
+    1xbet'in Sponsorluk Anlaşmaları
+</h2>
+<p>
+    1xbet firmasının önde gelen spor kulüpleri ve spor organizasyonları ile yapmış olduğu sponsorluk anlaşmaları bulunuyor. Bu anlaşmalar üstelik dünyanın önde gelen isimleri ile yapılıyor. Yani yerel değil global çaplı bir çalışma yapıyorlar.
+</p>
+
+
+<p>
+    Geçtiğimiz yıl Barcelona, Liverpool ve Chelsea futbol kulüpleri ile uzun süreli yaptığı anlaşma büyük bir ses getirmişti.
+
+</p>
+
+<p>
+    Barcelona ile yapılan sponsorluk anlaşması 30 Haziran 2024'e kadar sürecek. Tam beş sezon boyunca Barcelona futbol kulübünün yeni 'Küresel Ortağı' olacağı bir sponsorluk anlaşması imzaladılar. 
+
+</p>
+
+<div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
+
+
+<h2>
+    Spor bahisleri ve Casino oyunları
+</h2>
+
+<p>Sitede maç öncesi ve canlı bahis marketlerinde çok sayıda seçenek yer alıyor. Birçok spor branşına yer veriliyor.  Spor bahislerinin yanı sıra TV showları, seçim sonuçları, gibi farklı alanlarda da bahisler açılıyor. Günün her saati birbirinden farklı spor karşılaşmalarına bahis almak mümkün. Örneğin; futbol, basketbol, tenis gibi popüler olan ve çok fazla bahis oynanan spor dallarının yanı sıra; boks, diğer dövüş sporları, masa tenisi gibi daha az talep gören dallara da bahis yapılabiliyor.
+</p>
+
+<p>
+    Casino bölümünde oyun severlerin aradığı her şey var diyebiliriz. İnanılmaz büyüklükte bir bölüm. İçerisinde neredeyse yok yok! O kadar fazla oyun var ki, her birini denemeye kalksanız günlerinizi harcamak zorunda kalabilirsiniz.
+
+</p>
+<p>
+    En popüler slot oyunları ve en iyi casino servis sağlayıcılarının tüm oyunlarına 1xbet casino ve canlı casino bölümünde yer veriliyor. Dünyanın en saygın casino sunucularının oyunlarını güvenle ve keyifle oynayabileceğiniz son derece kaliteli casino lobileri yer alıyor. Kazı kazan, tombala, loto, piyango, poker, 21 (blackjack) ve daha birçok oyuna kolayca ulaşabiliyorsunuz.
+</p>
+<!-- End Home -->
 
        
       </div>
