--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -1540,6 +1540,18 @@
 
   
 
+<amp-analytics async type="gtag" data-credentials="include">
+<script type="application/json">
+{
+  "vars" : {
+    "gtag_id": "G-LXBRG4340F",
+    "config" : {
+      "G-LXBRG4340F": { "groups": "default" }
+    }
+  }
+}
+</script>
+</amp-analytics>
 </body>
 
 </html>
