--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -31,6 +31,8 @@
 <meta name="twitter:image:src" content="https://ulams.com/assets/img/bahisrator.webp"/>
 
   <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+
 
 
 
