--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -1546,9 +1546,9 @@
 <script type="application/json">
 {
   "vars" : {
-    "gtag_id": "G-LXBRG4340F",
+    "gtag_id": "UA-73123559-10",
     "config" : {
-      "G-LXBRG4340F": { "groups": "default" }
+      "UA-73123559-10": { "groups": "default" }
     }
   }
 }
