--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -1542,7 +1542,7 @@
 
   
 
-<amp-analytics async type="gtag" data-credentials="include">
+<amp-analytics async type="googleanalytics" data-credentials="include">
 <script type="application/json">
 {
   "vars" : {
