--- a/1xbet-mobil-giris.html
+++ b/1xbet-mobil-giris.html
@@ -1528,7 +1528,7 @@
 
   
 
-<amp-analytics async type="gtag" data-credentials="include">
+<amp-analytics async type="googleanalytics" data-credentials="include">
 <script type="application/json">
 {
   "vars" : {
