--- a/1xbet-giris.html
+++ b/1xbet-giris.html
@@ -1482,7 +1482,7 @@
 
   
 
-<amp-analytics async type="googleanalytics" data-credentials="include">
+<amp-analytics type="googleanalytics" data-credentials="include">
 <script type="application/json">
 {
   "vars" : {
