--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -1574,7 +1574,7 @@
 
   
 
-<amp-analytics type="googleanalytics" data-credentials="include">
+<amp-analytics type="googleanalytics" ">
 <script type="application/json">
 {
   "vars" : {
