--- a/1xbet.html
+++ b/1xbet.html
@@ -1509,7 +1509,7 @@ a[href^="/to/"]:hover:before {
 
   
 
-<amp-analytics type="googleanalytics data-credentials="include">
+<amp-analytics type="googleanalytics ">
 <script type="application/json">
 {
   "vars" : {
