--- a/musteri-hizmetleri.html
+++ b/musteri-hizmetleri.html
@@ -1463,7 +1463,7 @@
 
   
 
-<amp-analytics type="googleanalytics" data-credentials="include">
+<amp-analytics type="googleanalytics" ">
 <script type="application/json">
 {
   "vars" : {
