--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -1542,7 +1542,7 @@
 
   
 
-<amp-analytics type="googleanalytics" ">
+<amp-analytics type="googleanalytics">
 <script type="application/json">
 {
   "vars" : {
