--- a/1xbet-giris.html
+++ b/1xbet-giris.html
@@ -1482,7 +1482,7 @@
 
   
 
-<amp-analytics type="googleanalytics" ">
+<amp-analytics type="googleanalytics">
 <script type="application/json">
 {
   "vars" : {
