--- a/1xbet-mobil-giris.html
+++ b/1xbet-mobil-giris.html
@@ -1528,7 +1528,7 @@
 
   
 
-<amp-analytics type="googleanalytics" ">
+<amp-analytics type="googleanalytics">
 <script type="application/json">
 {
   "vars" : {
