--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -1508,11 +1508,11 @@
   
   <footer id="footer">
     <div class="container">
-    <a href="https://tahye.com/turkiyedeki-yasal-bahis-siteleri/" target="_blank">Yasal Bahis Siteleri</a> |
-    <a href="https://qimse.com">Yabancı Bahis Siteleri</a> |
+    <a href="https://ortuse.com/turkiyedeki-yasal-bahis-siteleri/" target="_blank">Yasal Bahis Siteleri</a> |
+    <a href="https://apkox.com">Yabancı Bahis Siteleri</a> |
     
-    <a href="https://inkzn.com/" target="_blank"> Paralı Okey Siteleri</a> |
-    <a href="https://iensta.com" target="_blank">Canlı Bahis</a>
+    <a href="https://iusra.com/" target="_blank"> Paralı Okey Siteleri</a> |
+    <a href="https://hakgg.com" target="_blank">Canlı Bahis</a>
     |
     
     <a href="https://azbie.com" target="_blank">Bahis Siteleri</a> |
